src/test/deca/syntax/invalid/resultats/test43_method-lex.res
'class': [@0,319:323='class',<7>,15:0]
IDENT: [@1,325:325='A',<26>,15:6]
'{': [@2,327:327='{',<36>,15:8]
'protected': [@3,330:338='protected',<21>,16:1]
IDENT: [@4,340:345='string',<26>,16:11]
IDENT: [@5,347:347='i',<26>,16:18]
';': [@6,348:348=';',<39>,16:19]
IDENT: [@7,351:353='int',<26>,17:1]
IDENT: [@8,355:357='fct',<26>,17:5]
'(': [@9,358:358='(',<34>,17:8]
IDENT: [@10,359:361='int',<26>,17:9]
IDENT: [@11,363:363='a',<26>,17:13]
')': [@12,364:364=')',<35>,17:14]
'asm': [@13,368:370='asm',<6>,18:2]
'(': [@14,372:372='(',<34>,18:6]
IDENT: [@15,373:373='i',<26>,18:7]
')': [@16,374:374=')',<35>,18:8]
';': [@17,375:375=';',<39>,18:9]
'}': [@18,377:377='}',<37>,19:0]
